# hcpu-rv32i

./: .ghci  .gitignore  ChangeLog.md  LICENSE  README.md  cabal.project  hcpu-rv32i.cabal  hie.yaml  package.yaml  riscv-rv32i.cabal  stack.yaml
app/: Main.hs
src/: RV32I.hs
src/RV32I/: CPU.hs  DSL.hs  Format.hs  Instruction.hs  RAM.hs  RV32I.hs  Register.hs  Top.hs  Word.hs
src/RV32I/Programs/: Example.hs  Fib.hs
test/RV32I/: CPUSpec.hs  DSLSpec.hs  InstructionSpec.hs  RAMSpec.hs  RV32ISpec.hs  RegisterSpec.hs  WordSpec.hs
test/RV32I/Programs/: ExampleSpec.hs
test/TestUtils/: Common.hs  Program.hs
tests/RV32I/: CPUSpec.hs  DSLSpec.hs  InstructionSpec.hs  RegisterSpec.hs  WordSpec.hs
tests/RV32I/Programs/: ExampleSpec.hs
tests/TestUtils/: Program.hs
verilog/RV32I.Top.topEntity/: clash-manifest.json  topEntity.sdc  topEntity.v
